[package]
name = "wasm-laserlight"
version = "0.1.0"
authors = ["<post-rex@pm.me> postrex"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.17"
web-sys = "0.3.44"
winit = { version = "0.22.2", features = ["web-sys"] }

[profile.release]
opt-level = "s"
