[package]
name = "wasm-laserlight"
version = "0.1.0"
authors = ["<post-rex@pm.me> postrex"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.17"
winit = { version = "0.22.2", features = ["web-sys"] }
js-sys = "0.3.44"
log = "0.4.11"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.44"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "HtmlCanvasElement",
]

[profile.release]
opt-level = "s"
