[package]
name = "wasm-laserlight"
version = "0.1.0"
authors = ["<post-rex@pm.me> postrex"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
winit = { version = "0.22", features = ["web-sys"] }
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
nalgebra = "0.22"
flume = "0.2"
instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }
futures-task = "0.3"
pin-utils = "0.1"

[dependencies.web-sys]
version = "0.3.44"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "HtmlCanvasElement",
]

[build-dependencies]
wasm-pack = "0.9.1"

[profile.release]
opt-level = "s"
